ligolang/src/test/contracts/negative/modules_export_namespace.jsligo
namespace Bar {
    namespace Foo {
        let a = 2;
    }
};

import Foo = Bar.Foo